Attempt at Zoom on Scroll
Failed, but committing to merge to thread

--- a/index.html
+++ b/index.html
@@ -277,7 +277,7 @@
 							</div>
 						</div>
 					</li>
-					<li class="parallax-bg__myers">
+					<li class="parallax-bg__myers" id="roadtrip-2">
 						<div class="col-md-6"> 
 							<div class="scroll-list-box">
 								<div class="box-header">
