--- a/index.html
+++ b/index.html
@@ -173,7 +173,7 @@
 		</filter>
 	</svg>
 	<video autoplay loop muted id="nrthrn-hero">
-		<source src="video/FPO-northern-vid-2.webm.webm" type="video/webm">
+		<source src="video/FPO-northern-vid-2.webm" type="video/webm">
 		<source src="video/FPO-northern-vid-2.mp4" type="video/mp4">
 		<!--<source src="video/FPO-northern-vid-1.ogg" type="video/ogg">-->
 		Your browser does not support the video tag.
@@ -258,7 +258,6 @@
 			</div>
 		</div>
 	</div>
-
 	<a href="#burney">
 		<ul class="hideContentWrap" id="burney">
 			<li class="hideContentHeader">Burney Falls</li>
