Header styles added
Some slight styles change to accommodate for new header styles.

--- a/index.html
+++ b/index.html
@@ -180,6 +180,7 @@
 	</video>
 </section>
 
+<!-- BRANDI POST -->
 <section class="bg-img-container-wrap" id="nrthrn-blog-post">
 	<div class="container-fluid article blogger-post">
 		<div class="row">
@@ -244,6 +245,7 @@
 	</div>
 </section> 
 
+<!-- PHOTO OP -->
 <img class="section-marker" src="images/section-marker.png">
 <section class="bg-img-container-wrap northern" id="photo-op">
 	<div class="container-fluid article">
@@ -300,15 +302,23 @@
 	</a>
 </section>
 
-<section class="bg-img-container-wrap" id="article-roadtrip">
+<!-- ROAD TRIP -->
+<img class="section-marker" src="images/section-marker.png">
+<section class="bg-img-container-wrap northern" id="article-roadtrip">
 	<div class="container-fluid article">
 		<div class="row">
-			<div class="col-md-12 article-head">
-				<h1>The Anti “Are We There Yet?” Road Trip</h1>
-				<h2>The Avenue of the Giants, a 30-mile stretch of Highway 101, is arguably one of America’s coolest drives.</h2>
+			<div class="col-md-12">
+				<h1>The Anti<br>“Are We There Yet?”<br>Road Trip</h1>
+			</div>
+		</div>
+		<div class="row">
+			<div class="col-md-8 col-md-offset-2">
+				<h2>The Avenue of the Giants, a 30-mile stretch of Highway 101,<br>is arguably one of America’s coolest drives.</h2>
 				<p>For a slice of Americana, complete with trees you can drive right through, take the family on a road trip along Highway 101. The route, starting from Phillipsville (roughly 225 miles north of San Francisco on the 101) and going north to Stafford, cuts through California’s Humboldt Redwoods State Park, home to the densest concentration of old-growth redwoods in the world. Here’s a guide for where to roam along this iconic stretch of road. It’s a drive so spectacular you may not hear an “Are we there yet?” the whole time.</p>
 			</div>
 		</div>
+	</div>
+	<div class="container-fluid article">
 		<div class="row">
 			<div class="col-md-12">
 				<ul class="scroll-list">
@@ -387,6 +397,7 @@
 	</div>
 </section>
 
+<!-- KID ATTRACTIONS -->
 <img class="section-marker" src="images/section-marker.png">
 <section class="bg-img-container-wrap northern" id="kid-attractions">
 	<div class="container-fluid article">
