--- a/index.html
+++ b/index.html
@@ -14,13 +14,15 @@
 	<link type="text/css"; rel="stylesheet"; href="css/style.css">
 	<!-- <link rel="icon" href="assets/favicon.png"> -->
 	<title>State of Play</title>
+	<script src='https://api.mapbox.com/mapbox-gl-js/v0.18.0/mapbox-gl.js'></script>
+	<link href='https://api.mapbox.com/mapbox-gl-js/v0.18.0/mapbox-gl.css' rel='stylesheet' />
 </head>
 <body>
 <script src="js/jquery-1.12.0.min.js"></script>
 <script src="js/script.js"></script>
 
-<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"> </script>
-<script type="text/javascript" src="http://maps.google.com/maps/api/js?sensor=false"></script>
+<!--script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"> </script>
+<script type="text/javascript" src="http://maps.google.com/maps/api/js?sensor=false"></script-->
 
 <section class="main-hero full-page">
 	<svg class="title-trtmnt" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 714.6 424.6">
