--- a/index.html
+++ b/index.html
@@ -24,7 +24,9 @@
 
 <section class="main-hero full-page">
 	<svg class="title-trtmnt" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 714.6 424.6">
-	<polygon class="st0" points="714.6 212.3 357 424.6 0 212.3 357.3 0 "/><polygon class="st1" points="695.2 212.3 356.8 413.2 19 212.3 357.1 11.4 "/><text transform="matrix(1 0 0 1 267.073 121.6203)" class="state">state</text><text transform="matrix(1 0 0 1 267.1209 202.5311)" class="play">play</text><line class="st6" x1="273.8" y1="140.3" x2="333.8" y2="140.3"/><line class="st6" x1="380.8" y1="140.3" x2="440.8" y2="140.3"/><text transform="matrix(1 0 0 1 345.5594 147.7191)" class="of italc">of</text><rect x="164.5" y="225.7" class="st9" width="385.5" height="68.2"/><text transform="matrix(1 0 0 1 180.3961 237.5967)"><tspan class="dek">Discover why a trip to California makes the ultimate </tspan><tspan x="-13.1" y="20" class="dek">family vacation. Explore northern, central, and southern </tspan><tspan x="88.4" y="40" class="dek">California’s places to play.</tspan></text><text transform="matrix(1 0 0 1 277.9373 356.616)" class="california">California</text><text transform="matrix(1 0 0 1 286.526 323.2844)" class="southern italc">southern</text><rect x="279.7" y="299.7" class="st1" width="155.2" height="31.5"/><polygon points="418 312.8 427.8 312.8 422.9 308.1 "/><polygon points="418 317.5 427.8 317.5 422.9 322.3 "/><polygon points="342.9 386.9 371.6 386.9 357.2 395 "/>
+	<polygon class="bg-diamond" points="714.6 212.3 357 424.6 0 212.3 357.3 0 "/>
+	<polygon class="st1" points="695.2 212.3 356.8 413.2 19 212.3 357.1 11.4 "/>
+	<text transform="matrix(1 0 0 1 267.073 121.6203)" class="state">state</text><text transform="matrix(1 0 0 1 267.1209 202.5311)" class="play">play</text><line class="st6" x1="273.8" y1="140.3" x2="333.8" y2="140.3"/><line class="st6" x1="380.8" y1="140.3" x2="440.8" y2="140.3"/><text transform="matrix(1 0 0 1 345.5594 147.7191)" class="of italc">of</text><rect x="164.5" y="225.7" class="txt-bx" width="385.5" height="68.2"/><text transform="matrix(1 0 0 1 180.3961 237.5967)"><tspan class="dek">Discover why a trip to California makes the ultimate </tspan><tspan x="-13.1" y="20" class="dek">family vacation. Explore northern, central, and southern </tspan><tspan x="88.4" y="40" class="dek">California’s places to play.</tspan></text><text transform="matrix(1 0 0 1 277.9373 356.616)" class="california">California</text><text transform="matrix(1 0 0 1 286.526 323.2844)" class="southern italc">southern</text><rect x="279.7" y="299.7" class="st1" width="155.2" height="31.5"/><polygon points="418 312.8 427.8 312.8 422.9 308.1 "/><polygon points="418 317.5 427.8 317.5 422.9 322.3 "/><polygon points="342.9 386.9 371.6 386.9 357.2 395 "/>
 	</svg>
 </section>
 
@@ -160,22 +162,21 @@
 	<div class="nav-status-bar"></div>
 </section>
 
-<section class="region-hero full-page">
-	<svg class="region-hero-title" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 692.7 413.8">
-		<polygon class="diamond shad" points="683.5 206.5 345.1 407.4 7.3 206.5 345.4 5.6 "/>
-		<text transform="matrix(1 0 0 1 147.7531 200.4431)" class="region-loc shad italc">Northern</text>
-		<text transform="matrix(1 0 0 1 141.9746 260.7898)" class="state shad">California</text>
-		<polygon class="diamond" points="682.5 205.5 344.1 406.4 6.3 205.5 344.4 4.6 "/>
-		<text transform="matrix(1 0 0 1 146.7531 199.4431)" class="region-loc italc">Northern</text>
-		<text transform="matrix(1 0 0 1 140.9746 259.7898)" class="state">California</text>
+<section class="region-hero full-page" id="northern">
+	<svg class="region-hero-title" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 681.5 405.6">
+		<polygon class="diamond shad" points="679.7 203.8 341.2 404.7 3.4 203.8 341.6 2.9 "/>
+		<text transform="matrix(1 0 0 1 118.4505 255.3401)" class="state shad">California</text>
+		<text transform="matrix(1 0 0 1 132.9939 193.3259)" class="region-loc shad italc">NORTHERN</text>
+		<polygon class="diamond" points="677.7 201.8 339.2 402.7 1.4 201.8 339.6 0.9 "/>
+		<text transform="matrix(1 0 0 1 116.4505 253.3401)" class="state">California</text>
+		<text transform="matrix(1 0 0 1 130.9939 191.3259)" class="region-loc italc">NORTHERN</text>
 		<filter id="pictureFilter" >
-		  <feGaussianBlur stdDeviation="4" />
+		  <feGaussianBlur stdDeviation="2" />
 		</filter>
 	</svg>
-	<video autoplay loop muted id="nrthrn-hero">
+	<video autoplay loop muted>
 		<source src="video/FPO-northern-vid-2.webm" type="video/webm">
 		<source src="video/FPO-northern-vid-2.mp4" type="video/mp4">
-		<!--<source src="video/FPO-northern-vid-1.ogg" type="video/ogg">-->
 		Your browser does not support the video tag.
 	</video>
 </section>
@@ -500,6 +501,42 @@
 			</li>
 		</ul>
 	</a>
+</section>
+
+<section class="region-hero full-page">
+	<svg class="region-hero-title" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 692.7 413.8">
+		<polygon class="diamond shad" points="683.5 206.5 345.1 407.4 7.3 206.5 345.4 5.6 "/>
+		<text transform="matrix(1 0 0 1 147.7531 200.4431)" class="region-loc shad italc">Central</text>
+		<text transform="matrix(1 0 0 1 141.9746 260.7898)" class="state shad">California</text>
+		<polygon class="diamond" points="682.5 205.5 344.1 406.4 6.3 205.5 344.4 4.6 "/>
+		<text transform="matrix(1 0 0 1 146.7531 199.4431)" class="region-loc italc">Central</text>
+		<text transform="matrix(1 0 0 1 140.9746 259.7898)" class="state">California</text>
+		<filter id="pictureFilter" >
+		  <feGaussianBlur stdDeviation="4" />
+		</filter>
+	</svg>
+	<video autoplay loop muted>
+		<source src="video/508845990.mp4" type="video/mp4">
+		Your browser does not support the video tag.
+	</video>
+</section>
+
+<section class="region-hero full-page">
+	<svg class="region-hero-title" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 692.7 413.8">
+		<polygon class="diamond shad" points="683.5 206.5 345.1 407.4 7.3 206.5 345.4 5.6 "/>
+		<text transform="matrix(1 0 0 1 147.7531 200.4431)" class="region-loc shad italc">Southern</text>
+		<text transform="matrix(1 0 0 1 141.9746 260.7898)" class="state shad">California</text>
+		<polygon class="diamond" points="682.5 205.5 344.1 406.4 6.3 205.5 344.4 4.6 "/>
+		<text transform="matrix(1 0 0 1 146.7531 199.4431)" class="region-loc italc">Southern</text>
+		<text transform="matrix(1 0 0 1 140.9746 259.7898)" class="state">California</text>
+		<filter id="pictureFilter" >
+		  <feGaussianBlur stdDeviation="4" />
+		</filter>
+	</svg>
+	<video autoplay loop muted>
+		<source src="video/FPO-southern-vid-1.mp4" type="video/mp4">
+		Your browser does not support the video tag.
+	</video>
 </section>
 
 <script src="js/bootstrap.min.js"></script>
