--- a/index.html
+++ b/index.html
@@ -567,8 +567,8 @@
 			</li>
 		</ul>
 	</a>
-	<a href="#santa-barbara-natural-history">
-		<ul class="hideContentWrap" id="santa-barbara-natural-history">
+	<a href="#sb-natural-history">
+		<ul class="hideContentWrap" id="sb-natural-history">
 			<li class="hideContentHeader">Santa Barbara Museum of Natural History</li>
 			<li class="hideContent">
 				<div class="text-box">
