Photo Paths Fixed
Also made jpg of Chabot tif

--- a/index.html
+++ b/index.html
@@ -504,7 +504,7 @@
 
 <!-- Edu(va)cation -->
 <img class="section-marker" src="images/section-marker.png">
-<section class="bg-img-container-wrap central" id="eduvacation">
+<section class="bg-img-container-wrap northern" id="eduvacation">
 	<div class="container-fluid article">
 		<div class="row">
 			<div class="col-md-12">
