Central SVG implemented
Southern next

--- a/index.html
+++ b/index.html
@@ -162,7 +162,7 @@
 	<div class="nav-status-bar"></div>
 </section>
 
-<section class="region-hero full-page" id="northern">
+<section class="region-hero full-page">
 	<svg class="region-hero-title" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 681.5 405.6">
 		<polygon class="diamond shad" points="679.7 203.8 341.2 404.7 3.4 203.8 341.6 2.9 "/>
 		<text transform="matrix(1 0 0 1 118.4505 255.3401)" class="state shad">California</text>
@@ -504,17 +504,28 @@
 </section>
 
 <section class="region-hero full-page">
-	<svg class="region-hero-title" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 692.7 413.8">
-		<polygon class="diamond shad" points="683.5 206.5 345.1 407.4 7.3 206.5 345.4 5.6 "/>
-		<text transform="matrix(1 0 0 1 147.7531 200.4431)" class="region-loc shad italc">Central</text>
-		<text transform="matrix(1 0 0 1 141.9746 260.7898)" class="state shad">California</text>
-		<polygon class="diamond" points="682.5 205.5 344.1 406.4 6.3 205.5 344.4 4.6 "/>
-		<text transform="matrix(1 0 0 1 146.7531 199.4431)" class="region-loc italc">Central</text>
-		<text transform="matrix(1 0 0 1 140.9746 259.7898)" class="state">California</text>
-		<filter id="pictureFilter" >
-		  <feGaussianBlur stdDeviation="4" />
-		</filter>
-	</svg>
+	<svg class="region-hero-title" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 681.4 405.9">
+	<style type="text/css">  
+	.st0{fill:none;stroke:#000000;stroke-width:1.5;stroke-miterlimit:10;}
+	.st1{font-family:'BrandonGrotesque-Light';}
+	.st2{font-size:65.9182px;}
+	.st3{letter-spacing:5;}
+	.st4{font-family:'BrandonGrotesque-BlackItalic';}
+	.st5{font-size:71.5672px;}
+	.st6{letter-spacing:6;}
+	.st7{fill:none;stroke:#FFFFFF;stroke-width:1.5;stroke-miterlimit:10;}
+	.st8{fill:#FFFFFF;}
+	</style>
+	<polygon class="diamond shad" points="679.7 203.7 341.3 404.6 3.5 203.7 341.6 2.8 "/>
+	<text transform="matrix(1 0 0 1 118.5439 255.2865)" class="state shad">California</text>
+	<text transform="matrix(1 0 0 1 175.2044 193.2724)" class="region-loc shad italc">CENTRAL</text>
+	<polygon class="diamond" points="677.7 201.7 339.3 402.6 1.5 201.7 339.6 0.8 "/>
+	<text transform="matrix(1 0 0 1 116.5439 253.2865)" class="state">California</text>
+	<text transform="matrix(1 0 0 1 173.2044 191.2724)" class="region-loc italc">CENTRAL</text>
+	<filter id="pictureFilter" >
+	  <feGaussianBlur stdDeviation="2" />
+	</filter>
+</svg>
 	<video autoplay loop muted>
 		<source src="video/508845990.mp4" type="video/mp4">
 		Your browser does not support the video tag.
