--- a/index.html
+++ b/index.html
@@ -505,17 +505,6 @@
 
 <section class="region-hero full-page">
 	<svg class="region-hero-title" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 681.4 405.9">
-	<style type="text/css">  
-	.st0{fill:none;stroke:#000000;stroke-width:1.5;stroke-miterlimit:10;}
-	.st1{font-family:'BrandonGrotesque-Light';}
-	.st2{font-size:65.9182px;}
-	.st3{letter-spacing:5;}
-	.st4{font-family:'BrandonGrotesque-BlackItalic';}
-	.st5{font-size:71.5672px;}
-	.st6{letter-spacing:6;}
-	.st7{fill:none;stroke:#FFFFFF;stroke-width:1.5;stroke-miterlimit:10;}
-	.st8{fill:#FFFFFF;}
-	</style>
 	<polygon class="diamond shad" points="679.7 203.7 341.3 404.6 3.5 203.7 341.6 2.8 "/>
 	<text transform="matrix(1 0 0 1 118.5439 255.2865)" class="state shad">California</text>
 	<text transform="matrix(1 0 0 1 175.2044 193.2724)" class="region-loc shad italc">CENTRAL</text>
@@ -533,16 +522,13 @@
 </section>
 
 <section class="region-hero full-page">
-	<svg class="region-hero-title" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 692.7 413.8">
-		<polygon class="diamond shad" points="683.5 206.5 345.1 407.4 7.3 206.5 345.4 5.6 "/>
-		<text transform="matrix(1 0 0 1 147.7531 200.4431)" class="region-loc shad italc">Southern</text>
-		<text transform="matrix(1 0 0 1 141.9746 260.7898)" class="state shad">California</text>
-		<polygon class="diamond" points="682.5 205.5 344.1 406.4 6.3 205.5 344.4 4.6 "/>
-		<text transform="matrix(1 0 0 1 146.7531 199.4431)" class="region-loc italc">Southern</text>
-		<text transform="matrix(1 0 0 1 140.9746 259.7898)" class="state">California</text>
-		<filter id="pictureFilter" >
-		  <feGaussianBlur stdDeviation="4" />
-		</filter>
+	<svg class="region-hero-title" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 681.4 405.7">
+		<polygon class="diamond shad" points="679.7 203.8 341.2 404.7 3.5 203.8 341.6 2.9 "/>
+		<text transform="matrix(1 0 0 1 118.4586 255.3635)" class="state shad">California</text>
+		<text transform="matrix(1 0 0 1 138.4766 193.3493)" class="region-loc shad italc">SOUTHERN</text>
+		<polygon class="diamond" points="677.7 201.8 339.2 402.7 1.5 201.8 339.6 0.9 "/>
+		<text transform="matrix(1 0 0 1 116.4586 253.3635)" class="state">California</text>
+		<text transform="matrix(1 0 0 1 136.4766 191.3493)" class="region-loc italc">SOUTHERN</text>
 	</svg>
 	<video autoplay loop muted>
 		<source src="video/FPO-southern-vid-1.mp4" type="video/mp4">
