--- a/index.html
+++ b/index.html
@@ -579,6 +579,67 @@
 	</a>
 </section>
 
+<!-- Must-See Parks -->
+<img class="section-marker" src="images/section-marker.png">
+<section class="bg-img-container-wrap northern" id="must-see-parks">
+	<div class="container-fluid article">
+		<div class="row">
+			<div class="col-md-12">
+				<h1>4 Outdoor Adventures</br>in Central California</h1>
+			</div>
+		</div>
+		<div class="row">
+			<div class="col-md-8 col-md-offset-2">
+				<h2>The phrase “great outdoors” gets new meaning in California. These spots serve up some of the most breathtaking views, landscapes, and excursions in the country—and even the world. Here's a must-see list for a family of explorers.</h2>
+			</div>
+		</div>
+	</div>
+	<a href="#yosemite">
+		<ul class="hideContentWrap" id="yosemite">
+			<li class="hideContentHeader">Towering Granite and Plummeting Waterfalls</li>
+			<li class="hideContent">
+				<h4>Yosemite National Park</h4>
+				<div class="text-box">
+					<p>Yosemite, considered one of the crown jewels of the national park system, lies 200 miles east of historic San Francisco. Best known for its immense granite cliff faces, crashing waterfalls, and unmatched parkland, the expansive grounds should be seen on foot over several days. Hikes range from short strolls (Glacier Point and Tuolumne Meadows) to more demanding treks, like the 7.2-mile walk to the top of Yosemite Falls (not recommended for young children). Science-minded little ones can visit the Nature Center or Yosemite Valley Visitor Center to learn about life in the park through interactive exhibits, and can even study to become Junior Rangers (ages 7-13) or Little Cubs (ages 3-6).</p>
+				</div>
+			</li>
+		</ul>
+	</a>
+	<a href="#mammoth-lakes">
+		<ul class="hideContentWrap" id="mammoth-lakes">
+			<li class="hideContentHeader">Magnificent Mountains, Sparkling Lakes, and Fabulous Fairways</li>
+			<li class="hideContent">
+				<h4>Mammoth Lakes</h4>
+				<div class="text-box">
+					<p>This area in the Eastern Sierra offers mountain biking, boating, kayaking, canoeing, swimming, and world-renowned fishing. If you prefer to perfect your swing, there are two public golf courses with forest-lined fairways and expansive views. Let the kids go wild at the Mammoth Adventure Center, which includes a climbing wall, zip line, and bungee trampoline. Or take a break from the outdoors at Mammoth Rock ‘n’ Bowl, which features 12 state-of-the-art bowling lanes, a game area, and three indoor golf simulators. There are also plentiful historic sites curious little explorers—including the historic Hayden Cabin museum and the Mammoth Consolidated Mine.</p>
+				</div>
+			</li>
+		</ul>
+	</a>
+	<a href="#sequoia-kings">
+		<ul class="hideContentWrap" id="sequoia-kings">
+			<li class="hideContentHeader">Skyscraping Trees, Deep Canyons, and Thundering Rivers</li>
+			<li class="hideContent">
+				<h4>Sequoia and Kings Canyon National Parks</h4>
+				<div class="text-box">
+					<p>These two parks sit side by side in the southern Sierra Nevada east of the San Joaquin Valley, and boast dramatic landscapes, huge mountains, rugged foothills, deep caverns, and caves to explore. But it’s the immense sequoias, considered the world’s most majestic trees, that will grab the family’s undivided attention. Kids will love exploring on day hikes (look for paved trails for younger ones), adventuring on an overnight wilderness trip, or learning about the park via a ranger-led program, like the Kids’ Campfire Talks. And a bonus for any family with a fourth-grade student: You can earn a free pass through the Every Kid in a Park program.</p>
+				</div>
+			</li>
+		</ul>
+	</a>
+	<a href="#death-valley">
+		<ul class="hideContentWrap" id="death-valley">
+			<li class="hideContentHeader">Colossal Sand Dunes</br>and Living Colors</li>
+			<li class="hideContent">
+				<h4>Death Valley National Park</h4>
+				<div class="text-box">
+					<p>Don’t let its name fool you. This famed spread of 3.4 million acres of desert and mountains is one of the most uniquely beautiful places on earth. Hikes will reveal vivid flood-carved caverns, gigantic sand dunes, crystalized salt flats, or lush oases that harbor tiny fish. Golf enthusiasts can play a morning round at 214 feet below sea level at the Furnace Creek Resort. Several air-conditioned lodges and a visitor’s center showing educational films offer respite from the legendary desert heat. Take the kids for a walk in the moonlight to spot a full spectrum of the desert, stars, and planets that comes to life at night, or cool off with a dip in the pool at Stovepipe Wells Village. They’ll also love hopping on a horse at Furnace Creek Ranch or having their photo taken at Badwater Basin (major bragging rights—it’s the lowest-elevation spot in North America)!</p>
+				</div>
+			</li>
+		</ul>
+	</a>
+</section>
+
 <script src="js/bootstrap.min.js"></script>
 </body>
 </html>
