--- a/index.html
+++ b/index.html
@@ -553,10 +553,10 @@
 	</div>
 	<a href="#chabot-space">
 		<ul class="hideContentWrap" id="chabot-space">
-			<li class="hideContentHeader">Chabot Space & Science Center, Oakland</li>
+			<li class="hideContentHeader">Chabot Space & Science Center</li>
 			<li class="hideContent">
 				<div class="text-box">
-					<p>Ready for an out-of-this-world adventure? Take a trip through outer space via Chabot’s state-of-the-art planetarium, or see if you have the right stuff on a simulated space mission in the Challenger Learning Center. The center is great for all ages, including the littlest astronauts, who can enroll in the Tyke Explorers Workshop, which teaches children three to five years old about space, dinosaurs, the human body, and other science topics. Chabot is home to three telescopes open for public viewing—visit after sunset for a spectacular view of the night sky.</p>
+					<p>Ready for an out-of-this-world adventure? Head to Oakland to take a trip through outer space via Chabot’s state-of-the-art planetarium, or see if you have the right stuff on a simulated space mission in the Challenger Learning Center. The center is great for all ages, including the littlest astronauts, who can enroll in the Tyke Explorers Workshop, which teaches children three to five years old about space, dinosaurs, the human body, and other science topics. Chabot is home to three telescopes open for public viewing—visit after sunset for a spectacular view of the night sky.</p>
 				</div>
 			</li>
 		</ul>
@@ -573,17 +573,17 @@
 	</a>
 	<a href="#academy-sciences">
 		<ul class="hideContentWrap" id="academy-sciences">
-			<li class="hideContentHeader">California Academy of Sciences, San Francisco</li>
+			<li class="hideContentHeader">California Academy of Sciences</li>
 			<li class="hideContent">
 				<div class="text-box">
-					<p>Housing more than 26 million specimens, the California Academy of Sciences is one of the biggest attractions of its kind in the world. Between the planetarium, the aquarium, and the natural history museum, it’s hard to know where to go first (and you can’t go wrong). Don’t miss the Osher Rainforest, a four-story neo-tropical rainforest where you’ll encounter exotic birds and reptiles, amphibians, spiders, and Amazonian fish. Also, be sure to buy your tickets online in advance so you can skip the line when you arrive.</p>
+					<p>Housing nearly 46 million specimens, the California Academy of Sciences in San Francisco is one of the biggest attractions of its kind in the world. Between the planetarium, aquarium, and natural history museum, it’s hard to know where to go first (and you can’t go wrong). Don’t miss the Osher Rainforest, a four-story neo-tropical rainforest where you’ll encounter exotic birds and reptiles, amphibians, spiders, and Amazonian fish. Also, be sure to buy your tickets online in advance so you can skip the line when you arrive.</p>
 				</div>
 			</li>
 		</ul>
 	</a>
 	<a href="#exploratorium">
 		<ul class="hideContentWrap" id="exploratorium">
-			<li class="hideContentHeader">Exploratorium, San Francisco</li>
+			<li class="hideContentHeader">Exploratorium</li>
 			<li class="hideContent">
 				<div class="text-box">
 					<p>A public learning laboratory, this San Francisco institution sits at the intersection of science and art. Often described as a mad scientist’s penny arcade, a scientific funhouse, and an experimental laboratory all rolled into one, the center boasts more than 600 hands-on exhibits and displays—a tinkerer’s paradise. You can also explore a dark maze using only your hands (discovering some interesting textures along the way), or channel your inner caveman (or cavewoman) and make your own cave petroglyph. A travel tip:  Schedule your visit on a weekday, as weekends are very popular with locals and tourists alike.</p>
@@ -593,10 +593,10 @@
 	</a>
 	<a href="#tech-museum">
 		<ul class="hideContentWrap" id="tech-museum">
-			<li class="hideContentHeader">The Tech Museum of Innovation, San Jose</li>
+			<li class="hideContentHeader">The Tech Museum of Innovation</li>
 			<li class="hideContent">
 				<div class="text-box">
-					<p>It seems perfectly fitting that Silicon Valley would have its own state-of-the-art, technology-centric museum that locals call “The Tech.” Going beyond the usual science museum, The Tech empowers guests to explore biotech, cyber security, design and build their own robots, and play with hundreds of interactive exhibits and displays. When your brain is tuckered, sit back and enjoy films on 9,000-plus square feet of wraparound IMAX screen (the largest IMAX dome theater in the western United States), or check out one of the most geektacular gift shops around.</p>
+					<p>It seems perfectly fitting that Silicon Valley would have its own state-of-the-art, technology-centric museum that San Jose locals call “The Tech.” Going beyond the usual science museum, The Tech empowers guests to explore biotech, cyber security, design and build their own robots, and play with hundreds of interactive exhibits and displays. When your brain is tuckered, sit back and enjoy films on 9,000-plus square feet of wraparound IMAX screen (the largest IMAX dome theater in the western United States), or check out one of the most geektacular gift shops around.</p>
 				</div>
 			</li>
 		</ul>
