--- a/index.html
+++ b/index.html
@@ -674,6 +674,114 @@
 	</a>
 </section>
 
+<!-- Theme Parks -->
+<img class="section-marker" src="images/section-marker.png">
+<section class="bg-img-container-wrap northern" id="theme-parks">
+	<div class="container-fluid article">
+		<div class="row">
+			<div class="col-md-12">
+				<h1>State of Play:</br>Thrills, Chills, and Enchantments</h1>
+			</div>
+		</div>
+		<div class="row">
+			<div class="col-md-8 col-md-offset-2">
+				<h2>Hooray for Hollywood, the Getty Museum, Rodeo Drive, Santa Monica, and Venice Beach! It’s no secret that Southern California is fairly brimming with amazing amusements and attractions for the whole family. But it’s also home to many of the most exciting theme parks in the world. Here, some of the best and brightest for thrill seekers of all ages.</h2>
+			</div>
+		</div>
+	</div>
+	<a href="#seaworld">
+		<ul class="hideContentWrap" id="seaworld">
+			<li class="hideContentHeader">Make a Splash</li>
+			<li class="hideContent">
+				<h4>SeaWorld San Diego</h4>
+				<div class="text-box">
+					<p>Spanning 190 acres, SeaWorld is all about bringing you and your kids on a wild journey under the sea. You can watch sea lions perform, get face-to-face with sharks that swim in a mammoth underwater tunnel, check out giant turtles at Turtle Reef, and hang out with more than 300 penguins at the Penguin Encounter. SeaWorld also features several adrenaline-pumping rides, including the Manta high-speed roller coaster. Meanwhile, tinier tots can visit the Sesame Street Bay of Play to ride Elmo’s Flying Fish and meet their favorite Sesame Street pals.</p>
+				</div>
+			</li>
+		</ul>
+	</a>
+	<a href="#knotts-berry">
+		<ul class="hideContentWrap" id="knotts-berry">
+			<li class="hideContentHeader">Go West</li>
+			<li class="hideContent">
+				<h4>Knott’s Berry Farm</h4>
+				<div class="text-box">
+					<p>Immerse yourself in the thrills of the California gold rush at Knott’s Berry Farm’s authentic Ghost Town, featuring buildings from actual mining and ghost towns and other Old West attractions. In the town of Calico, hang at the Calico Saloon and catch a cowboy-themed show on the Calico stage. Meanwhile you can descend into the depths of the farm’s “gold mine” to see the famed Calico Glory Hole. But Knott’s Berry Farm is definitely not stuck in the past. The park also features numerous thrill rides, a water park, and roller coasters. And this summer it will unveil Voyage to the Iron Reef, a new 4-D interactive ride—definitely of the 21st Century.</p>
+				</div>
+			</li>
+		</ul>
+	</a>
+	<a href="#magic-mountain">
+		<ul class="hideContentWrap" id="magic-mountain">
+			<li class="hideContentHeader">Chase High Speeds</li>
+			<li class="hideContent">
+				<h4>Six Flags Magic Mountain</h4>
+				<div class="text-box">
+					<p>Boasting 19 hair-raising roller coasters, this park is perfect for teenage thrill-seekers. New high-octane attractions include The New Revolution Virtual Reality Roller Coaster, a ride created in partnership with Samsung Gear VR and Oculus, where riders enter a virtual world with high-resolution imagery and 360-degree views synchronized to the action of the coaster. There’s also the newly renovated Twisted Colossus, the park’s famed wood/steel hybrid roller coaster that now has even more thrills. Later, cool down with a variety of tamer rides, catch a Looney Tunes show, or dine at one of more than 20 eateries.</p>
+				</div>
+			</li>
+		</ul>
+	</a>
+	<a href="#disneyland">
+		<ul class="hideContentWrap" id="disneyland">
+			<li class="hideContentHeader">Make Your Dreams Come True</li>
+			<li class="hideContent">
+				<h4>Disneyland Resort</h4>
+				<div class="text-box">
+					<p>Disneyland first opened its doors 60 years ago with a handful of rides and costumed characters strolling the grounds. Today the original site of the park boasts two separate theme parks—Disneyland and Disney California Adventure—featuring over 100 attractions and shows that revolve around Walt Disney’s beloved storybook and movie characters, but with some current additions. You can still “fly” with Dumbo and spin in a Wonderland teacup. But now you can also take a submarine voyage with Nemo and zoom on a high-octane race through Cars Land. There are also action movie-themed adventures, such as the Indiana Jones™ thrill ride and several exciting Star Wars–themed attractions that have recently made their debut.</p>
+				</div>
+			</li>
+		</ul>
+	</a>
+	<a href="#legoland">
+		<ul class="hideContentWrap" id="legoland">
+			<li class="hideContentHeader">Entertain “Kids” of All Ages</li>
+			<li class="hideContent">
+				<h4>LEGOLAND California</h4>
+				<div class="text-box">
+					<p>With over 60 rides, shows, a miniature golf course, hotel, and two water parks, LEGOLAND is hardly a vacation spot solely dedicated to plastic bricks. LEGO® fans can take in “The LEGO Movie 4D A New Adventure,” scoot around in mini LEGO® cars, and even tour a LEGO® factory. Recently LEGOLAND unveiled LEGO® Ninjago Ride, an interactive attraction where you launch fireballs, shockwaves, and lightning bolts with your hands to defeat the Great Devourer and earn ninja status. Also be sure to check out Miniland USA, which recreates entire U.S. cities using millions of LEGO® bricks.</p>
+				</div>
+			</li>
+		</ul>
+	</a>
+	<a href="#castle-park">
+		<ul class="hideContentWrap" id="castle-park">
+			<li class="hideContentHeader">Get in the Swing of Things</li>
+			<li class="hideContent">
+				<h4>Castle Park, Riverside</h4>
+				<div class="text-box">
+					<p>This classic amusement park offers 28 rides geared toward younger children, including bumper cars, the Antique Car ride, and the Whip, a centrifugal ride scaled down for kids. Pint-size thrill seekers will get their adrenaline fix on the Screamin’ Demon and the Fireball. New this summer is Castle Park’s five-level water playground, Buccaneer Cove, which features water slides, water tunnels, and water spray cannons. But perhaps the park’s biggest claims to fame are its four 18-hole championship miniature-golf courses and its Castle Arcade that offers 200 state-of-the-art video games.</p>
+				</div>
+			</li>
+		</ul>
+	</a>
+	<a href="#raging-waters">
+		<ul class="hideContentWrap" id="raging-waters">
+			<li class="hideContentHeader">Make Waves</li>
+			<li class="hideContent">
+				<h4>Raging Waters, Los Angeles</h4>
+				<div class="text-box">
+					<p>Raging Waters is California's largest water theme park and features gallons of rides, slides, children’s activity pools, and obstacle courses. The park’s latest attraction is the Aqua Rocket, the country’s first hydro-magnetic coaster that takes four people at a time on a high-thrills water ride. There’s also Neptune’s Fury, a 600-foot ride that plunges a four-man raft into total darkness down a 60-foot drop at 30 mph. When you want to unwind from an action-packed day, grab a raft and float lazily down the Amazon Adventure River.</p>
+				</div>
+			</li>
+		</ul>
+	</a>
+	<a href="#universal">
+		<ul class="hideContentWrap" id="universal">
+			<li class="hideContentHeader">Turn Fantasy Into Reality</li>
+			<li class="hideContent">
+				<h4>Universal Studios Hollywood</h4>
+				<div class="text-box">
+					<p>Discover the excitement of movie-making magic at one of Southern California’s most legendary theme parks, set on the grounds of an active film and television studio. In addition to spine-tingling rides that land you in the center of scenes from movies, you can see where those films were made on Universal’s famed Studio Tour. The new Wizarding World of Harry Potter™ lets you explore the magic of Hogwarts™ Castle, peruse the shops in Hogsmeade™, and experience heart-pounding Harry Potter–themed rides. Meanwhile, Springfield, which opened last year, lets you visit the town made famous in the hit animated series The Simpsons™. Grab a bite at Krusty Burger, and rocket through Krustyland on the popular Simpsons™ ride.
+
+					<ital>HARRY POTTER characters, names and related indicia are © & ™ Warner Bros. Entertainment Inc. Harry Potter Publishing Rights © JKR. (s16) © 2016 Universal Studios. All rights reserved.</ital>
+					</p>
+				</div>
+			</li>
+		</ul>
+	</a>
+</section>
+
 <script src="js/bootstrap.min.js"></script>
 </body>
 </html>
