Remove "State of Play"
From Southern Slide Show Attractiosn

--- a/index.html
+++ b/index.html
@@ -680,7 +680,7 @@
 	<div class="container-fluid article">
 		<div class="row">
 			<div class="col-md-12">
-				<h1>State of Play:</br>Thrills, Chills, and Enchantments</h1>
+				<h1>Thrills, Chills,</br>and Enchantments</h1>
 			</div>
 		</div>
 		<div class="row">
