--- a/index.html
+++ b/index.html
@@ -782,6 +782,90 @@
 	</a>
 </section>
 
+<!-- Theme Parks -->
+<img class="section-marker" src="images/section-marker.png">
+<section class="bg-img-container-wrap northern" id="kid-beaches">
+	<div class="container-fluid article">
+		<div class="row">
+			<div class="col-md-12">
+				<h1>6 Kid-Friendly</br>Southern California Beaches</h1>
+			</div>
+		</div>
+		<div class="row">
+			<div class="col-md-8 col-md-offset-2">
+				<h2>Just because Southern California is known for some of the best surfing in the country doesn’t mean it’s all about the big-wave beaches—there are plenty of family-friendly spots that you and your kids will love. After a day in the sun, settle in at one of these <a href="http://www.visitcalifornia.com/feature/kid-favorite-lodgings">kid-friendly lodgings</a>. </h2>
+			</div>
+		</div>
+	</div>
+	<a href="#coronado">
+		<ul class="hideContentWrap" id="coronado">
+			<li class="hideContentHeader">Coronado Central Beach</li>
+			<li class="hideContent">
+				<h4>Coronado</h4>
+				<div class="text-box">
+					<p>This beach, just south of San Diego’s downtown, boasts expansive white sand, easy ocean access, and quaint small-town feel. The waves are gentle enough for boogie boarding, and the spacious beach allows for games and sandcastle building. Parents will appreciate the iconic Hotel del Coronado for its history, architecture, and cocktails with a view; the kids will love the Del’s activities—dinosaur digs, scavenger hunts, and cooking classes using herbs from the hotel’s garden. After a beach day, you can’t beat MooTime Creamery for handmade waffle cones and ice cream.</p>
+				</div>
+			</li>
+		</ul>
+	</a>
+	<a href="#mission-bay">
+		<ul class="hideContentWrap" id="mission-bay">
+			<li class="hideContentHeader">Mission Bay</li>
+			<li class="hideContent">
+				<h4>San Diego</h4>
+				<div class="text-box">
+					<p>The unique combination of inlets and channels in Mission Bay make up the largest aquatic park of its kind in the country, with more than 27 miles of shoreline access along the protected lagoon. The calm waters are ideal for kayaking, stand-up paddleboarding, and sailing; grass parks are filled with playgrounds and picnic tables, and the flat sidewalks are perfect for riding a bike.</p>
+				</div>
+			</li>
+		</ul>
+	</a>
+	<a href="#la-jolla">
+		<ul class="hideContentWrap" id="la-jolla">
+			<li class="hideContentHeader">La Jolla Shores</li>
+			<li class="hideContent">
+				<h4>La Jolla</h4>
+				<div class="text-box">
+					<p>The beaches around the posh neighborhood of La Jolla give the adventurous family an abundance of options. Take the kids kayaking into sea caves, snorkel amid the marine life of La Jolla Shores, watch the seals jump on top of rocks at Children’s Pool Beach, and end your day by roasting s’mores in one of the fire pits at La Jolla Shores. For convenient beach access (and free breakfast for kids!), La Jolla Shores Hotel is located right on the water and provides complimentary chairs and umbrellas.</p>
+				</div>
+			</li>
+		</ul>
+	</a>
+	<a href="#carlsbad">
+		<ul class="hideContentWrap" id="carlsbad">
+			<li class="hideContentHeader">South Carlsbad State Beach</li>
+			<li class="hideContent">
+				<h4>Carlsbad</h4>
+				<div class="text-box">
+					<p>Want to enjoy a stunning sunset as you start the campfire? Spend the weekend camping on a bluff above the ocean in South Carlsbad, where the beach is just a set of stairs away. You can rent boogie boards and chairs at the local Offshore Surf Shop, which also offers surfing lessons. Although waves can get bigger here, there are lifeguards on watch from 10 a.m. to 6 p.m. in the summer. If you prefer the comfort of an RV, you can rent one and have it ready at your campsite when you arrive.</p>
+				</div>
+			</li>
+		</ul>
+	</a>
+	<a href="#crystal-cove">
+		<ul class="hideContentWrap" id="crystal-cove">
+			<li class="hideContentHeader">Crystal Cove</li>
+			<li class="hideContent">
+				<h4>Laguna Beach</h4>
+				<div class="text-box">
+					<p>Crystal Cove has striking cliffs, rolling surf, tide pools, and miles of hiking trails. Kids will love exploring the tide pools, where they can find colorful shells or various species of starfish at low tide. Check out the historic district along the water, where 46 beach cottages built in the 1930s and ’40s still stand. If you can score a reservation, stay overnight in one of the 16 available rentals, or just grab a meal at the Beachcomber Café, a converted cottage which serves food and signature cocktails all day.</p>
+				</div>
+			</li>
+		</ul>
+	</a>
+	<a href="#santa-monica">
+		<ul class="hideContentWrap" id="santa-monica">
+			<li class="hideContentHeader">Santa Monica Beach</li>
+			<li class="hideContent">
+				<h4>Santa Monica</h4>
+				<div class="text-box">
+					<p>There are more than three miles of sandy beach around the famous Santa Monica Pier (just 13 miles from downtown Los Angeles), plus countless land activities for kids nearby. Take a ride on the solar-powered Pacific Park Ferris Wheel, stop by the aquarium, or rent bikes or rollerblades to cruise along the 22-mile long beachfront path. For an L.A. movie star experience, treat yourself to a “beach butler” from Perry’s Beach Café—he will set up your beach chair, table, and umbrella, deliver you lunch and drinks, and clean everything up when you leave.</p>
+				</div>
+			</li>
+		</ul>
+	</a>
+</section>
+
+
 <script src="js/bootstrap.min.js"></script>
 </body>
 </html>
