--- a/index.html
+++ b/index.html
@@ -521,21 +521,6 @@
 	</video>
 </section>
 
-<section class="region-hero full-page">
-	<svg class="region-hero-title" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 681.4 405.7">
-		<polygon class="diamond shad" points="679.7 203.8 341.2 404.7 3.5 203.8 341.6 2.9 "/>
-		<text transform="matrix(1 0 0 1 118.4586 255.3635)" class="state shad">California</text>
-		<text transform="matrix(1 0 0 1 138.4766 193.3493)" class="region-loc shad italc">SOUTHERN</text>
-		<polygon class="diamond" points="677.7 201.8 339.2 402.7 1.5 201.8 339.6 0.9 "/>
-		<text transform="matrix(1 0 0 1 116.4586 253.3635)" class="state">California</text>
-		<text transform="matrix(1 0 0 1 136.4766 191.3493)" class="region-loc italc">SOUTHERN</text>
-	</svg>
-	<video autoplay loop muted>
-		<source src="video/FPO-southern-vid-1.mp4" type="video/mp4">
-		Your browser does not support the video tag.
-	</video>
-</section>
-
 <!-- Edu(va)cation -->
 <img class="section-marker" src="images/section-marker.png">
 <section class="bg-img-container-wrap northern" id="eduvacation">
@@ -613,6 +598,46 @@
 	</a>
 </section>
 
+<!-- #EEATS -->
+<img class="section-marker" src="images/section-marker.png">
+<section class="bg-img-container-wrap northern" id="article-eats">
+	<div class="container-fluid article">
+		<div class="row">
+			<div class="col-md-12">
+				<h1>#EEEEEATS:</br>Family-Friendly Spots</br>in Central California</h1>
+			</div>
+		</div>
+		<div class="row">
+			<div class="col-md-8 col-md-offset-2">
+				<h2>Central California is an agricultural powerhouse—</br>it’s no wonder that it’s packed with fun, fresh places to eat.</h2>
+			</div>
+		</div>
+		<div class="row">
+			<div class="col-md-6">
+				<p>Pint-size picky eater in the back seat? Fret not. Families driving through the Central Valley can take full advantage of the region’s fresh, local ingredients. As you make your way to Yosemite, the Sequoias, or the Monterey Peninsula, pull over to find hidden gems that will ensure no one in your crew goes hungry on vacation.</p>
+
+				<h3>Farm Fresh Fruit</h3>
+				<p>With a double-decker Venetian carousel and a train dubbed Casa de Choo Choo, Casa de Fruta in Hollister (roughly 50 miles inland from Santa Cruz) is a dream pit stop for kids. Visit the roadside stand for just-picked produce, and load up on fruits and vegetables before hopping back in the car—they’ll be the perfect road-trip snack.</p>
+
+				<h3>A Don’t-Leave-Without-One Burger </h3>
+				<p>With a double-decker Venetian carousel and a train dubbed Casa de Choo Choo, <bold>Casa de Fruta</bold> in Hollister (roughly 50 miles inland from Santa Cruz) is a dream pit stop for kids. Visit the roadside stand for just-picked produce, and load up on fruits and vegetables before hopping back in the car—they’ll be the perfect road-trip snack.</p>
+
+				<h3>Classic Mexican</h3>
+				<p>Adventurers headed to the Sierra National Forest or the southern end of Yosemite National Park should make a pit stop in Fresno at <bold>Castillo’s</bold>. The family-run restaurant has been serving up enchiladas, tamales, and tacos since 1955, and it’s famous for warm service, and raved-about house made tortillas and salsa (aka, crowd pleasers).</p>
+
+				<h3>American Classics</h3>
+				<p>If you’re driving along Highway 101 and notice a 40-foot-tall wooden cowboy, you’ve reached <bold>F. McClintock Saloon and Dining House</bold>, a Pismo Beach (13 miles south of San Luis Obispo) restaurant that’s been attracting tourists and locals alike for more than four decades. Inside, servers pour water from three feet above the glass, and kid-friendly fare includes skillet potatoes (drenched in cheese and bacon), nachos, and a variety of steaks and ribs.</p>
+
+				<h3>Save Room for Dessert</h3>
+				<p>No family vacation is complete without indulging in something sweet. After sights like Sequoia National Park, home to some of the largest trees in the world, make a pit stop in Hanford at <bold>Superior Dairy</bold>. Settle into the charming vinyl booths and enjoy freshly made, classic and seasonal scoops. Bon appetite!</p>
+			</div>
+			<div class="col-md-5 col-md-offset-1">
+				<img class="img-responsive" src="images/FPO_northern-blogger-rsideimg1.jpg">
+			</div>
+		</div>
+	</div>
+</section> 
+
 <!-- Must-See Parks -->
 <img class="section-marker" src="images/section-marker.png">
 <section class="bg-img-container-wrap northern" id="must-see-parks">
@@ -672,6 +697,21 @@
 			</li>
 		</ul>
 	</a>
+</section>
+
+<section class="region-hero full-page">
+	<svg class="region-hero-title" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 681.4 405.7">
+		<polygon class="diamond shad" points="679.7 203.8 341.2 404.7 3.5 203.8 341.6 2.9 "/>
+		<text transform="matrix(1 0 0 1 118.4586 255.3635)" class="state shad">California</text>
+		<text transform="matrix(1 0 0 1 138.4766 193.3493)" class="region-loc shad italc">SOUTHERN</text>
+		<polygon class="diamond" points="677.7 201.8 339.2 402.7 1.5 201.8 339.6 0.9 "/>
+		<text transform="matrix(1 0 0 1 116.4586 253.3635)" class="state">California</text>
+		<text transform="matrix(1 0 0 1 136.4766 191.3493)" class="region-loc italc">SOUTHERN</text>
+	</svg>
+	<video autoplay loop muted>
+		<source src="video/FPO-southern-vid-1.mp4" type="video/mp4">
+		Your browser does not support the video tag.
+	</video>
 </section>
 
 <!-- Theme Parks -->
