Camp CA almost finished
Everything’s been positioned, just needs some tweaking and adding all
the correct images.

--- a/index.html
+++ b/index.html
@@ -246,6 +246,148 @@
 	</div>
 </section> 
 
+<!-- CAMP CA -->
+<img class="section-marker" src="images/section-marker.png">
+<section class="bg-img-container-wrap northern" id="camp-ca">
+	<div class="container-fluid article">
+		<div class="row">
+			<div class="col-md-12">
+				<h1>Camp California</h1>
+			</div>
+		</div>
+		<div class="row">
+			<div class="col-md-8 col-md-offset-2">
+				<h2>Northern California offers some of the most stunning and diverse campsites in the world—</br>explore these six options.</h2>
+				<p>Whether you want to sleep at the feet of giants in Redwoods National Park or wake up at the water’s edge in Lake Tahoe, adventure seekers will marvel at Northern California’s options. From off-the-grid rustic sites to the ultimate glamping experience, here are six options for planning your next camping excursion.</p>
+			</div>
+		</div>
+		<div class="row">
+			<div class="col-md-6">
+				<div class="scroll-list-box">
+					<div class="box-header">
+						<div class="box-header-num">1</div>
+						<span class="stop-name">Steep Ravine Environmental Campground</span>
+					</div>
+					<div class="text-wrapper">
+						<h5>Mount Tamalpais State Park</h5>
+						<p>Although it’s a mere 45 minutes away from San Francisco, Steep Ravine feels incredibly remote. On a clear day, you can see the city’s skyline in the distance, as well as the Farallon Islands 25 miles off the coast. Pitch a tent or stay in a rustic cabin—sites for both look out on expansive ocean views perfect for watching the sunset.</p>
+						<p><span class="bold">What to do:</span> Hike or drive to nearby Stinson Beach, where lifeguards are on duty from May through mid-September. On weekends, head to the mountain’s Gravity Car Barn to learn about the sloping, winding railroad that once carried passengers down by gravity alone.</p>
+					</div>
+				</div>
+			</div>
+		</div>
+		<div class="row">
+			<div class="col-md-6 col-md-offset-6">
+				<img src="images/camp-ca/steep-ravine.jpg">
+			</div>
+		</div>
+		<div class="row">
+			<div class="col-md-6">
+				<div class="scroll-list-box">
+					<div class="box-header">
+						<div class="box-header-num">2</div>
+						<span class="stop-name">MacKerricher State Park Campground</span>
+					</div>
+					<div class="text-wrapper">
+						<h5>Fort Bragg</h5>
+						<p>Three miles up the coast from Fort Bragg, MacKerricher State Park showcases multiple habitats—forest, beach, dunes, bluffs, wetlands, and a collection of tide pools at the shore—around its 140-plus campsites. During whale migration season (winter and spring), MacKerricher boasts nine miles of uninterrupted coastline for spotting spouts.</p>
+						<p><span class="bold">What to do:</span> Take a ride on the historic Skunk Train, a 131-year-old engine that has chugged along the coastal “Redwood Route” since 1885. Horse lovers can get saddle time in at Ten Mile Beach or in Jackson State Forest. If the kiddos need a break from “all that nature,” take a swing at mini golf at the Emerald Dolphin Inn, and stop for a cone at Cowlick’s Ice Cream Café on the way back to camp. </p>
+					</div>
+				</div>
+			</div>
+		</div>
+		<div class="row">
+			<div class="col-md-6 col-md-offset-6">
+				<img src="images/camp-ca/steep-ravine.jpg">
+			</div>
+		</div>
+		<div class="row">
+			<div class="col-md-6">
+				<div class="scroll-list-box">
+					<div class="box-header one-line">
+						<div class="box-header-num">3</div>
+						<span class="stop-name">Beach Camp</span>
+					</div>
+					<div class="text-wrapper">
+						<h5>D.L. Bliss State Park, Lake Tahoe</h5>
+						<p>It’s no wonder these lakeside campgrounds are so highly coveted given their proximity to the crystal-clear waters of Lake Tahoe. The water and all of its activities wait mere feet away from your tent. Pack warm clothes for the evenings, which tend to be chilly even during the summer months.</p>
+						<p><span class="bold">What to do:</span> Waterbugs will enjoy swimming, diving, or paddleboarding on the lake’s clear water. Or stay on land to lounge on the beach or explore miles of nearby trails—don’t miss the opportunity to snap a picture at Balancing Rock in the northwest section of the park. At the end of the day, join fellow campers at the campfire center to swap adventure stories.</p>
+					</div>
+				</div>
+			</div>
+		</div>
+		<div class="row">
+			<div class="col-md-6 col-md-offset-6">
+				<img src="images/camp-ca/steep-ravine.jpg">
+			</div>
+		</div>
+		<div class="row">
+			<div class="col-md-6">
+				<div class="scroll-list-box">
+					<div class="box-header one-line">
+						<div class="box-header-num">4</div>
+						<span class="stop-name">Tomales Bay State Park</span>
+					</div>
+					<div class="text-wrapper">
+						<h5>Point Reyes National Seashore</h5>
+						<p>Up for an adventure? First, buy some fresh oysters at the Marshall Store, rent a kayak at Blue Waters Kayaking, and load up your gear for a one-hour paddle to the boat-in only Tomales Bay campsites. After you set up camp on the beach, hike the steep hill for a breathtaking view of Tomales Bay.</p>
+						<p><span class="bold">What to do:</span> Check out Pierce Point Ranch, where you can catch a glimpse of the nearly 400 tule elk in residence at the Tule Elk Reserve. Visitors to the Kenneth C. Patrick Visitor Center at Drakes Beach can learn about 16th-century maritime exploration and check out the minke whale skeleton on display.</p>
+					</div>
+				</div>
+			</div>
+		</div>
+		<div class="row">
+			<div class="col-md-6 col-md-offset-6">
+				<img src="images/camp-ca/steep-ravine.jpg">
+			</div>
+		</div>
+		<div class="row">
+			<div class="col-md-6">
+				<div class="scroll-list-box">
+					<div class="box-header one-line">
+						<div class="box-header-num">5</div>
+						<span class="stop-name">Sequoia High Sierra Camp</span>
+					</div>
+					<div class="text-wrapper">
+						<h5>Sequoia-Kings Canyon National Parks</h5>
+						<p>If the words “luxury” and “camping” ever belonged in the same sentence, it would be to describe this glamping experience. The camp outfits its 330-square-foot canvas tents with plush mattresses, down feather pillows and comforters, and luxe wool area rugs.</p>
+						<p><span class="bold">What to do:</span> Bring a fly rod to cast out over nearby creeks and lakes (the camp has limited supplies available for borrowing). Book a horseback-riding excursion before you arrive. Make a checklist of local wildlife, including deer, chipmunks, hummingbirds, and marmots, and see who can spot the most! </p>
+					</div>
+				</div>
+			</div>
+		</div>
+		<div class="row">
+			<div class="col-md-6 col-md-offset-6">
+				<img src="images/camp-ca/steep-ravine.jpg">
+			</div>
+		</div>
+		<div class="row">
+			<div class="col-md-6">
+				<div class="scroll-list-box">
+					<div class="box-header">
+						<div class="box-header-num">6</div>
+						<span class="stop-name">Big Basin Redwoods</br>State Park</span>
+					</div>
+					<div class="text-wrapper">
+						<h5>North of Boulder Creek</h5>
+						<p>Not only does Big Basin feature an incredible collection of gigantic redwoods, but the area is also home to 80 miles of trails sprinkled with gorgeous waterfalls (take the 10-mile Berry Creek Loop for a look at the cascading Berry Creek Falls). If your crew prefers a tent upgrade, you can rent a spacious “tent cabin” that sleeps four and comes with mattress pads and a wood stove.</p>
+						<p><span class="bold">What to do:</span> Enjoy the park’s 80 miles of trails, punctuated by the towering trees. For a high-flying adventure, head south to Mount Hermon Adventures Redwood Canopy Tours, where explorers ages 10+ can fly through the trees on a zip-line adventure. A lower course is available for kids as young as five.</p>
+					</div>
+				</div>
+			</div>
+		</div>
+		<div class="row">
+			<div class="col-md-6 col-md-offset-6">
+				<img src="images/camp-ca/steep-ravine.jpg">
+			</div>
+		</div>
+		<div class="row">
+			<div class="col-md-8 col-md-offset-2">
+				<p>Check out eight more spots for adventurous kids <a href="http://www.visitcalifornia.com/feature/8-great-spots-take-adventurous-daughter">here</a>.</p>
+			</div>
+		</div>
+</section>
+
 <!-- PHOTO OP -->
 <img class="section-marker" src="images/section-marker.png">
 <section class="bg-img-container-wrap northern" id="photo-op">
@@ -404,7 +546,7 @@
 	<div class="container-fluid article">
 		<div class="row">
 			<div class="col-md-12">
-				<h1>Must-See Kid-Friendly Attractions</h1>
+				<h1>8 Must-See Kid-Friendly Attractions</h1>
 			</div>
 		</div>
 		<div class="row">
