Replaced In-n-Out Copy
Plus added proper bold span styling

--- a/index.html
+++ b/index.html
@@ -617,19 +617,19 @@
 				<p>Pint-size picky eater in the back seat? Fret not. Families driving through the Central Valley can take full advantage of the region’s fresh, local ingredients. As you make your way to Yosemite, the Sequoias, or the Monterey Peninsula, pull over to find hidden gems that will ensure no one in your crew goes hungry on vacation.</p>
 
 				<h3>Farm Fresh Fruit</h3>
-				<p>With a double-decker Venetian carousel and a train dubbed Casa de Choo Choo, Casa de Fruta in Hollister (roughly 50 miles inland from Santa Cruz) is a dream pit stop for kids. Visit the roadside stand for just-picked produce, and load up on fruits and vegetables before hopping back in the car—they’ll be the perfect road-trip snack.</p>
+				<p>With a double-decker Venetian carousel and a train dubbed Casa de Choo Choo, <span class="bold">Casa de Fruta</span> in Hollister (roughly 50 miles inland from Santa Cruz) is a dream pit stop for kids. Visit the roadside stand for just-picked produce, and load up on fruits and vegetables before hopping back in the car—they’ll be the perfect road-trip snack.</p>
 
 				<h3>A Don’t-Leave-Without-One Burger </h3>
-				<p>With a double-decker Venetian carousel and a train dubbed Casa de Choo Choo, <bold>Casa de Fruta</bold> in Hollister (roughly 50 miles inland from Santa Cruz) is a dream pit stop for kids. Visit the roadside stand for just-picked produce, and load up on fruits and vegetables before hopping back in the car—they’ll be the perfect road-trip snack.</p>
+				<p>Harry Snyder couldn’t possibly have known what he was creating when he opened California’s first drive-thru burger stand in 1948. Fast-forward to 2015, and the 300th <span class="bold">In-N-Out Burger</span> restaurant—now operating in five states—opens, a testament to the cult-like following. Go for the classic burgers, and stay for the famous shakes (choose from classic chocolate, strawberry and vanilla flavors, or order one of each!). For an insider experience, ask about the not-so-secret secret menu.</p>
 
 				<h3>Classic Mexican</h3>
-				<p>Adventurers headed to the Sierra National Forest or the southern end of Yosemite National Park should make a pit stop in Fresno at <bold>Castillo’s</bold>. The family-run restaurant has been serving up enchiladas, tamales, and tacos since 1955, and it’s famous for warm service, and raved-about house made tortillas and salsa (aka, crowd pleasers).</p>
+				<p>Adventurers headed to the Sierra National Forest or the southern end of Yosemite National Park should make a pit stop in Fresno at <span class="bold">Castillo’s</span>. The family-run restaurant has been serving up enchiladas, tamales, and tacos since 1955, and it’s famous for warm service, and raved-about house made tortillas and salsa (aka, crowd pleasers).</p>
 
 				<h3>American Classics</h3>
-				<p>If you’re driving along Highway 101 and notice a 40-foot-tall wooden cowboy, you’ve reached <bold>F. McClintock Saloon and Dining House</bold>, a Pismo Beach (13 miles south of San Luis Obispo) restaurant that’s been attracting tourists and locals alike for more than four decades. Inside, servers pour water from three feet above the glass, and kid-friendly fare includes skillet potatoes (drenched in cheese and bacon), nachos, and a variety of steaks and ribs.</p>
+				<p>If you’re driving along Highway 101 and notice a 40-foot-tall wooden cowboy, you’ve reached <span class="bold">F. McClintock Saloon and Dining House</span>, a Pismo Beach (13 miles south of San Luis Obispo) restaurant that’s been attracting tourists and locals alike for more than four decades. Inside, servers pour water from three feet above the glass, and kid-friendly fare includes skillet potatoes (drenched in cheese and bacon), nachos, and a variety of steaks and ribs.</p>
 
 				<h3>Save Room for Dessert</h3>
-				<p>No family vacation is complete without indulging in something sweet. After sights like Sequoia National Park, home to some of the largest trees in the world, make a pit stop in Hanford at <bold>Superior Dairy</bold>. Settle into the charming vinyl booths and enjoy freshly made, classic and seasonal scoops. Bon appetite!</p>
+				<p>No family vacation is complete without indulging in something sweet. After sights like Sequoia National Park, home to some of the largest trees in the world, make a pit stop in Hanford at <span class="bold">Superior Dairy</span>. Settle into the charming vinyl booths and enjoy freshly made, classic and seasonal scoops. Bon appetite!</p>
 			</div>
 			<div class="col-md-5 col-md-offset-1">
 				<img class="img-responsive" src="images/FPO_northern-blogger-rsideimg1.jpg">
