All FPO blogger boxes added
Plus first right-rail images.

--- a/index.html
+++ b/index.html
@@ -528,7 +528,7 @@
 			<div class="col-md-9">
 				<h1>Pattie's Guide To Northern California</h1>
 				<h2>Lorem ipsum dolor sit amet, et sensibus inciderint cum,ei vim unum fierent vulputate.</h2>
-				<img class="img-responsive begin-content blogger-info-box" src="images/FPO_Blogger_box.png">
+				<img class="img-responsive begin-content blogger-info-box" src="images/pattie/FPO_Pattie_Blogger_box.png">
 			</div>
 		</div>
 		<div class="row">
@@ -553,7 +553,7 @@
 				<p>Central California is a wonderful region of the Golden State, with the ocean and mountains surrounding the family-owned farms and quaint towns that you’ll run into simply by driving down the scenic highways. Families can always find something that they enjoy doing. Whether we choose a day at the beach, a tour of historic missions, or fruit picking at a farm, Central California will give us three days of fun, great meals, and bonding moments that will carry us into our future California travels.</p>
 			</div>
 			<div class="col-md-5 col-md-offset-1">
-				<img class="img-responsive" src="images/FPO_northern-blogger-rsideimg1.jpg">
+				<img class="img-responsive" src="images/pattie/visiting-oceanside.jpg">
 			</div>
 		</div>
 	</div>
@@ -758,8 +758,8 @@
 		<div class="row">
 			<div class="col-md-9">
 				<h1>Justine's 25 Reasons to Visit California</h1>
-				<h2>Lorem ipsum dolor sit amet, et sensibus inciderint cum,ei vim unum fierent vulputate.</h2>
-				<img class="img-responsive begin-content blogger-info-box" src="images/FPO_Blogger_box.png">
+				<h2>Lorem ipsum dolor sit amet, et sensibus inciderint cum, ei vim unum fierent vulputate.</h2>
+				<img class="img-responsive begin-content blogger-info-box" src="images/justine/FPO_Justine_Blogger_box.png">
 			</div>
 		</div>
 		<div class="row">
@@ -849,7 +849,7 @@
 				<p class="italc">From <a href="http://temeculablogs.com/">The Typical Mom</a> family to yours, I hope you find several activities you love among our suggestions here and make memories with each other this year that will last a lifetime!</p>
 			</div>
 			<div class="col-md-5 col-md-offset-1">
-				<img class="img-responsive" src="images/FPO_northern-blogger-rsideimg1.jpg">
+				<img class="img-responsive" src="images/justine/JustineHowell_1.jpg">
 			</div>
 		</div>
 	</div>
