Arrow icon SVG created
+ Caption styles started in Pattie’s section.

--- a/index.html
+++ b/index.html
@@ -669,7 +669,7 @@
 		<div class="row">
 			<div class="col-md-9">
 				<h1>Pattie's Guide To Northern California</h1>
-				<h2>Lorem ipsum dolor sit amet, et sensibus inciderint cum,ei vim unum fierent vulputate.</h2>
+				<h2>Lorem ipsum dolor sit amet, et sensibus inciderint cum, ei vim unum fierent vulputate.</h2>
 				<img class="img-responsive begin-content blogger-info-box" src="images/pattie/FPO_Pattie_Blogger_box.png">
 			</div>
 		</div>
@@ -696,6 +696,14 @@
 			</div>
 			<div class="col-md-5 col-md-offset-1">
 				<img class="img-responsive" src="images/pattie/visiting-oceanside.jpg">
+				<div class="caption">
+					<svg class="arrow" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 19.2 19.2">
+						<circle cx="9.6" cy="9.6" r="9.6"/>
+						<polygon points="13.9 8.1 9.6 4.3 5.3 8.1 9.2 8.1 9.2 14.9 10.1 14.9 10.1 8.1 "/>
+					</svg>
+					<h5>Lorem Ipsum</h5>
+					<p>Lorem ipsum dolor sit amet, eruditi scaevola temporibus ne eam, quo te quis feugait liberavisse.</p>
+				</div>
 			</div>
 		</div>
 	</div>
