Anchor Links Added
+Removed margin left on Surf n’ Skate
-Need to find way to link to section hero

--- a/index.html
+++ b/index.html
@@ -36,51 +36,51 @@
 			<ul class="toc-menu">
 	  			<li class="nav-explore">EXPLORE</li>
 	  			<li class="toc-region">NORTHERN CALIFORNIA</li>
-	  			<li class="toc-blogger"><a href="#">
+	  			<li class="toc-blogger"><a href="#nrthrn-blog-post">
 	  				<div class="blogger-circle"></div><span class="toc-with">with</span></br>
 	  				Brandi Riley</a></li>
 	  			<li class="toc-plus">plus</li>
-	    		<li><a href="#">Camp California</a></li>
+	    		<li><a href="#camp-ca">Camp California</a></li>
 	    		<li role="separator" class="divider"></li>
-	    		<li><a href="#">TK Kid Friendly Attractions</a></li>
+	    		<li><a href="#photo-op">Photo Op: Share-Worthy Northern California Spots</a></li>
 	    		<li role="separator" class="divider"></li>
-	    		<li><a href="#">Photo Op: Share-Worthy Northern California Spots</a></li>
-	    		<li role="separator" class="divider"></li>
-	    		<li><a href="#">The Anti “Are We There Yet?” Road Trip</a></li> 
+	    		<li><a href="#article-roadtrip">The Anti “Are We There Yet?” Road Trip</a></li>
+	    		<li role="separator" class="divider"></li> 
+	    		<li><a href="#kid-attractions">8 Must-See Kid-Friendly Attractions</a></li>
 	  		</ul>
 		</div>
 		<div class="col-md-4 toc-cca">
 			<ul class="toc-menu">
 	  			<li class="nav-explore">EXPLORE</li>
 	  			<li class="toc-region">CENTRAL CALIFORNIA</li>
-	  			<li class="toc-blogger"><a href="#">
+	  			<li class="toc-blogger"><a href="#cntrl-blog-post">
 	  				<div class="blogger-circle"></div><span class="toc-with">with</span></br>
 	  				Patti Cordova</a></li>
 	  			<li class="toc-plus">plus</li>
-			    <li><a href="#">Edu(va)cation</a></li>
+			    <li><a href="#eduvacation">Edu(va)cation</a></li>
 	    		<li role="separator" class="divider"></li>
-	    		<li><a href="#">#EEEEEATS: Family-Friendly Spots in Central California</a></li>
+	    		<li><a href="#article-meet-cca">Get to Know Central California</a></li>
 	    		<li role="separator" class="divider"></li>
-	    		<li><a href="#">Get to Know Central California</a></li>
+	    		<li><a href="#must-see-parks">4 Outdoor Adventures in Central California</a></li>
 	    		<li role="separator" class="divider"></li>
-	    		<li><a href="#">4 Outdoor Adventures in Central California</a></li>
+	    		<li><a href="#article-eats">#EEEEEATS: Family-Friendly Spots in Central California</a></li>
 	  		</ul>
 		</div>
 		<div class="col-md-4 toc-sca">
 			<ul class="toc-menu">
 	  			<li class="nav-explore">EXPLORE</li>
 	  			<li class="toc-region">SOUTHERN CALIFORNIA</li>
-	  			<li class="toc-blogger"><a href="#">
+	  			<li class="toc-blogger"><a href="#sthrn-blog-post">
 	  				<div class="blogger-circle"></div><span class="toc-with">with</span></br>
 	  				Justine Howell</a></li>
 	  			<li class="toc-plus">plus</li>
-	  			<li><a href="#">6 Kid-Friendly Southern California Beaches</a></li>
+	  			<li><a href="#theme-parks">Thrills, Chills, and Enchantments</a></li>
 	    		<li role="separator" class="divider"></li>
-	    		<li><a href="#">Surf ’n Skate</a></li>
+	    		<li><a href="#surf-skate">Surf ’n Skate</a></li>
 	    		<li role="separator" class="divider"></li>
-	    		<li><a href="#">Thrills, Chills, and Enchantments</a></li>
+	    		<li><a href="#kid-beaches">6 Kid-Friendly Southern California Beaches</a></li>
 	    		<li role="separator" class="divider"></li>
-	    		<li><a href="#">Bella Video</a></li>
+	    		<li><a href="#bella-video">Bella Video TK</a></li>
 	  		</ul>
 		</div>
 	</div>
@@ -96,18 +96,18 @@
 	  	<li class="btn"><span class="nav-explore">EXPLORE</span> NORTHERN CALIFORNIA
 		<span class="caret"></span></li>
 	  	<div class="invisible-hover"></div>
-	  	<li class="nav-blogger"><a href="#">
+	  	<li class="nav-blogger"><a href="#nrthrn-blog-post">
 	  		<div class="blogger-circle"></div>
 	  		<span class="blogger-name">Brandi Riley</span></br>
 	  		Headline TK</a></li>
 	  	<li role="separator" class="divider"></li>
-	    <li><a href="#">Camp California</a></li>
+	    <li><a href="#camp-ca">Camp California</a></li>
 	    <li role="separator" class="divider"></li>
-	    <li><a href="#">TK Kid Friendly Attractions</a></li>
+	    <li><a href="#photo-op">Photo Op: Share-Worthy Northern California Spots</a></li>
 	    <li role="separator" class="divider"></li>
-	    <li><a href="#">Photo Op: Share-Worthy Northern California Spots</a></li>
-	    <li role="separator" class="divider"></li>
-	    <li><a href="#">The Anti “Are We There Yet?” Road Trip</a></li>
+	    <li><a href="#article-roadtrip">The Anti “Are We There Yet?” Road Trip</a></li>
+	    <li role="separator" class="divider"></li> 
+	    <li><a href="#kid-attractions">8 Must-See Kid-Friendly Attractions</a></li>
 	  </ul>
 	</div>
 	<div class="nav-rule"></div>
@@ -120,18 +120,18 @@
 	  	<li class="btn"><span class="nav-explore">EXPLORE</span> CENTRAL CALIFORNIA
 		<span class="caret"></span></li>
 	  	<div class="invisible-hover"></div>
-	  	<li class="nav-blogger"><a href="#">
+	  	<li class="nav-blogger"><a href="#cntrl-blog-post">
 	  		<div class="blogger-circle"></div>
 	  		<span class="blogger-name">Patti Cordova</span></br>
 	  		Headline TK</a></li>
 	  	<li role="separator" class="divider"></li>
-	    <li><a href="#">Edu(va)cation</a></li>
+	     <li><a href="#eduvacation">Edu(va)cation</a></li>
 	    <li role="separator" class="divider"></li>
-	    <li><a href="#">#EEEEEATS: Family-Friendly Spots in Central California</a></li>
+	    <li><a href="#article-meet-cca">Get to Know Central California</a></li>
 	    <li role="separator" class="divider"></li>
-	    <li><a href="#">Get to Know Central California</a></li>
+	    <li><a href="#must-see-parks">4 Outdoor Adventures in Central California</a></li>
 	    <li role="separator" class="divider"></li>
-	    <li><a href="#">4 Outdoor Adventures in Central California</a></li>
+	    <li><a href="#article-eats">#EEEEEATS: Family-Friendly Spots in Central California</a></li>
 	  </ul>
 	</div>
 	<div class="nav-rule"></div>
@@ -144,18 +144,18 @@
 	  	<li class="btn"><span class="nav-explore">EXPLORE</span> SOUTHERN CALIFORNIA
 		<span class="caret"></span></li>
 	  	<div class="invisible-hover"></div>
-	  	<li class="nav-blogger"><a href="#">
+	  	<li class="nav-blogger"><a href="#sthrn-blog-post">
 	  		<div class="blogger-circle"></div>
 	  		<span class="blogger-name">Justine Howell</span></br>
 	  		Headline TK</a></li>
 	  	<li role="separator" class="divider"></li>
-	    <li><a href="#">6 Kid-Friendly Southern California Beaches</a></li>
+	  	<li><a href="#theme-parks">Thrills, Chills, and Enchantments</a></li>
 	    <li role="separator" class="divider"></li>
-	    <li><a href="#">Surf ’n Skate</a></li>
+	    <li><a href="#article-surf-skate">Surf ’n Skate</a></li>
 	    <li role="separator" class="divider"></li>
-	    <li><a href="#">Thrills, Chills, and Enchantments</a></li>
-<!-- 	    <li role="separator" class="divider"></li>
-	    <li><a href="#">The Anti “Are We There Yet?” Road Trip</a></li> -->
+	    <li><a href="#kid-beaches">6 Kid-Friendly Southern California Beaches</a></li>
+	    <li role="separator" class="divider"></li>
+	    <li><a href="#bella-video">Bella Video TK</a></li>
 	  </ul>
 	</div>
 	<div class="nav-progress-bar"></div>
@@ -645,7 +645,7 @@
 	</a>
 </section>
 
-<section class="region-hero full-page">
+<section class="region-hero full-page" id="cca-hero">
 	<svg class="region-hero-title" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 681.4 405.9">
 	<polygon class="diamond shad" points="679.7 203.7 341.3 404.6 3.5 203.7 341.6 2.8 "/>
 	<text transform="matrix(1 0 0 1 118.5439 255.2865)" class="state shad">California</text>
